<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/action_todo_gorup">
        <item
            android:id="@+id/action_add"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/action_add"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/action_edit_group"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/action_delete_group"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>