<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog">
    
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="할 일 추가"
        android:textColor="#000000"
        android:textSize="22dp"
        android:textStyle="bold"/>
        

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_title"
            android:layout_marginRight="10dp"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_study_name"
            android:layout_marginRight="10dp"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_study"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_minutes"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_rest_name"
            android:layout_marginRight="10dp"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_rest"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_minutes"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_long_rest_name"
            android:layout_marginRight="10dp"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_long_rest"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_minutes"
            android:layout_marginRight="10dp"
            android:textSize="15dp" />

        <CheckBox
            android:id="@+id/cb_no_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_no_long_rest" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_pomo"
            android:layout_marginRight="10dp"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_times"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_pomo_auto_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_auto_start" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        
        <Button
            android:id="@+id/bt_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/button_cancle"/>

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/button_ok"/>
        
    </LinearLayout>

</LinearLayout>